--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-complete-guide",
+  "name": "react-burger-builder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
